Add figures for partial volumes and plane rotation

--- a/docs/fundamentals/regularization/rotated_gradients.ipynb
+++ b/docs/fundamentals/regularization/rotated_gradients.ipynb
@@ -9,13 +9,13 @@
     "\n",
     "# Rotated Gradients\n",
     "\n",
-    "This section provides details about the rotation of gradient penalties to enforce trends in the model. This option is useful for counteracting modelling bias due to survey design (wide line separation) or reinforcing known geological trends, as depicted in the image below. \n",
+    "This section provides details about the rotation of gradient penalties to enforce trends in the model. Used in conjunction with weights and sparse norms, the rotation can help reinforce structural trends, as depicted in the image below. \n",
     "\n",
     "```{figure} ./images/rotated_demo.png\n",
     "---\n",
     "scale: 30%\n",
     "---\n",
-    "(Top) Horizontal and (bottom) verticel sections through (left) a simple dipping dyke model under smooth topography. (Center) Model recovered with the conventional smooth norm inversion. (Right) Compact model obtained with the rotation of the objective function at $45\\circ$ dip and $90\\circ$ azimuth. \n",
+    "(Top) Horizontal and (bottom) vertical sections through (left) a simple dipping dyke model under smooth topography. (Center) Model recovered using the conventional smooth norm inversion. (Right) Compact model obtained with the rotation of the objective function at $45\\circ$ dip towards East. \n",
     "```"
    ]
   },
@@ -40,7 +40,18 @@
     "\n",
     "where $\\mathbf{\\hat G}_i$ is the rotated gradient along one of the $u$, $v$ and $w$-axis. `Simpeg-drivers` uses a combination of forward and backward gradient operators to achieve better symmetry in 3D. The gradient operators are constructed based on the partial volumes intercepted by ghost cells rotated about the center of each cell. The partial volumes include diagonal neighbours.  \n",
     "\n",
-    "\n"
+    "```{figure} ./images/plane_rotation.png\n",
+    "---\n",
+    "scale: 30%\n",
+    "---\n",
+    "```\n",
+    "\n",
+    "\n",
+    "```{figure} ./images/partial_volumes.png\n",
+    "---\n",
+    "scale: 30%\n",
+    "---\n",
+    "```\n"
    ]
   },
   {
