Over-write code-based gravity and magnetics notebooks

--- a/docs/case_studies/Forrestania/forrestania.ipynb
+++ b/docs/case_studies/Forrestania/forrestania.ipynb
@@ -26,6 +26,7 @@
     "\n",
     "```{note}\n",
     "The following sections show how to run the same process using only open-source packages\n",
+    "\n",
     "- [Gravity](gravity-code)\n",
     "- [Magnetics](magnetics-code)\n",
     "```"
@@ -41,6 +42,13 @@
     "## Geological setting\n",
     "\n",
     "The Forrestania Greenstone Belt (FGB), located in the Youanmi Terrane of the Eastern Yilgarn Craton, hosts significant Ni-Cu-PGE mineralisation, primarily within komatiitic units (Frost, 2003; Collins et al., 2012). The belt is structurally complex, featuring synclines, faults, and shear zones that play a key role in sulphide localisation. It is bounded by granitic and gneissic basement, intruded by monzogranite and granodiorite, and transected by Proterozoic dolerite dykes (Perring et al., 1995). Multiple deformation events have remobilised nickel sulphides from their original host rocks into footwall sediments and granitic intrusions, resulting in both typical and atypical mineralisation styles, including granite-hosted sulphides (Collins et al., 2012).\n",
+    "\n",
+    "```{figure} ./images/Forrestania_case_study_Anomaly.jpg\n",
+    "---\n",
+    "name: Geological map with magnetic anomaly\n",
+    "---\n",
+    "Figure: Magnetic anomaly near the Greenstone belt interpreted as a potential mafic intrusion.\n",
+    "```\n",
     "\n",
     "The study area is underlain mainly by granitic rocks, forming the basement to the Parker-Range–Hatters Hill greenstone belt immediately to the east. This N–S-trending belt is the main regional host of nickel sulphide deposits, which occur within narrow ultramafic units in an Archaean sequence of metabasalts and sulphidic sediments. Notable nearby deposits include Beautiful Sunday, Flying Fox, and New Morning.\n",
     "\n",
