--- a/docs/case_studies/Forrestania/python_code/joint_grav_mag.ipynb
+++ b/docs/case_studies/Forrestania/python_code/joint_grav_mag.ipynb
@@ -18,7 +18,7 @@
     "\n",
     "This section demonstrates the joint inversion of gravity and magnetic data.\n",
     "\n",
-    "For an equivalent and streamlined version of this tutorial, see the parent [Forrestania](forrestania) case study.\n",
+    "For an equivalent and streamlined version of this tutorial, see the parent [Forrestania](forrestania-main) case study.\n",
     "\n",
     "```{note}\n",
     "The steps taken in this tutorial are strongly based on the official [SimPEG Tutorials](https://simpeg.xyz/user-tutorials/).\n",
