--- a/docs/case_studies/Forrestania/python_code/unconstrained_magnetics_inv_training.ipynb
+++ b/docs/case_studies/Forrestania/python_code/unconstrained_magnetics_inv_training.ipynb
@@ -12,7 +12,7 @@
     "This section demonstrates the processing and inversion of the Forrestania airborne **magnetic** dataset using purely open-source packages. \n",
     "\n",
     "For an equivalent and streamlined version, see the parent case study here:  \n",
-    "👉 [Forrestania Case Study](https://mirageoscience-simpeg-drivers.readthedocs-hosted.com/en/geopy-2297/case_studies/Forrestania/forrestania.html#forrestania)\n",
+    "👉 [Forrestania Case Study](forrestania-main)\n",
     "\n",
     "> 💡 **Note**:  \n",
     "\n",
