--- a/docs/fundamentals/data_misfit.ipynb
+++ b/docs/fundamentals/data_misfit.ipynb
@@ -75,7 +75,7 @@
    "source": [
     "#### Noise floor too high\n",
     "\n",
-    "With a high floor, the inversion is dominated by the [regularization](regularization.ipynb) function and the data remains underfitted - there is coherent signal in the observed data that is not accounted for. The model is very smooth and we have a poor recovery of the shape of the susceptible body."
+    "With a high floor, the inversion is dominated by the [regularization](regularization) function. As the data remains underfitted, a coherent signal remains unaccounted for. The model is very smooth, and we have a poor recovery of the shape of the susceptible body."
    ]
   },
   {
