--- a/docs/tutorials/gravity.ipynb
+++ b/docs/tutorials/gravity.ipynb
@@ -87,7 +87,7 @@
     "Refinement strategy used for the magnetic modeling.\n",
     "```\n",
     "\n",
-    "See [Mesh creation](mesh_design) section for general details on the parameters.\n"
+    "See [Mesh creation](mesh-design) section for general details on the parameters.\n"
    ]
   },
   {
