--- a/docs/case_studies/Forrestania/forrestania.ipynb
+++ b/docs/case_studies/Forrestania/forrestania.ipynb
@@ -5,7 +5,7 @@
    "id": "34c04eea-4ec5-468f-90aa-0f4bea2b44f3",
    "metadata": {},
    "source": [
-    "(forrestania)=\n",
+    "(forrestania-main)=\n",
     "\n",
     "# Forrestania: Joint grav/mag\n",
     "\n",
