Fix links and move geology section to base

--- a/docs/case_studies/Forrestania/forrestania.ipynb
+++ b/docs/case_studies/Forrestania/forrestania.ipynb
@@ -41,18 +41,54 @@
     "\n",
     "## Geological setting\n",
     "\n",
-    "The Forrestania Greenstone Belt (FGB), located in the Youanmi Terrane of the Eastern Yilgarn Craton, hosts significant Ni-Cu-PGE mineralisation, primarily within komatiitic units (Frost, 2003; Collins et al., 2012). The belt is structurally complex, featuring synclines, faults, and shear zones that play a key role in sulphide localisation. It is bounded by granitic and gneissic basement, intruded by monzogranite and granodiorite, and transected by Proterozoic dolerite dykes (Perring et al., 1995). Multiple deformation events have remobilised nickel sulphides from their original host rocks into footwall sediments and granitic intrusions, resulting in both typical and atypical mineralisation styles, including granite-hosted sulphides (Collins et al., 2012).\n",
+    "The **Forrestania Greenstone Belt**, located in the *Youanmi Terrane* of the **Eastern Yilgarn Craton**, is known for its significant **Ni-Cu-PGE mineralisation**, primarily hosted within **komatiitic units** (Frost, 2003; Collins et al., 2012).\n",
+    "\n",
+    "The belt features a **structurally complex architecture**, including:\n",
+    "- Synclines  \n",
+    "- Faults  \n",
+    "- Shear zones  \n",
+    "...that play a major role in sulphide localisation.\n",
+    "\n",
+    "It is:\n",
+    "- Bounded by **granitic and gneissic basement**  \n",
+    "- Intruded by **monzogranite** and **granodiorite**  \n",
+    "- Transected by **Proterozoic dolerite dykes** (Perring et al., 1995)\n",
+    "\n",
+    "Multiple deformation events have **remobilised nickel sulphides** into:\n",
+    "- Footwall sediments  \n",
+    "- Granitic intrusions  \n",
+    "\n",
+    "→ Resulting in both **typical** (ultramafic-hosted) and **atypical** (granite-hosted) mineralisation (Collins et al., 2012).\n",
+    "\n",
+    "---\n",
+    "\n",
+    "The study area is largely underlain by **granitic basement**, adjacent to the **Parker-Range–Hatters Hill greenstone belt** to the east.\n",
+    "\n",
+    "This **north–south-trending belt** is the regional host of:\n",
+    "- **Nickel sulphide deposits** in narrow **ultramafic units**\n",
+    "- Hosted within Archaean **metabasalts** and **sulphidic sediments**\n",
+    "\n",
+    "🟡 **Nearby deposits include**:\n",
+    "- Beautiful Sunday  \n",
+    "- Flying Fox  \n",
+    "- New Morning\n",
+    "\n",
+    "---\n",
+    "\n",
+    "A **prominent magnetic anomaly**, trending **E-W to ENE-WSW**, is located just west of the greenstone belt.  \n",
+    "Its:\n",
+    "- Strong magnetic response  \n",
+    "- Orientation  \n",
+    "- Coincident **nickel-in-soil geochemistry**  \n",
+    "\n",
+    "...suggest the presence of a **mafic intrusion**, making it a **key geophysical target**.\n",
     "\n",
     "```{figure} ./images/Forrestania_case_study_Anomaly.jpg\n",
     "---\n",
-    "name: Geological map with magnetic anomaly\n",
+    "name: Geological map\n",
     "---\n",
     "Figure: Magnetic anomaly near the Greenstone belt interpreted as a potential mafic intrusion.\n",
-    "```\n",
-    "\n",
-    "The study area is underlain mainly by granitic rocks, forming the basement to the Parker-Range–Hatters Hill greenstone belt immediately to the east. This N–S-trending belt is the main regional host of nickel sulphide deposits, which occur within narrow ultramafic units in an Archaean sequence of metabasalts and sulphidic sediments. Notable nearby deposits include Beautiful Sunday, Flying Fox, and New Morning.\n",
-    "\n",
-    "A prominent high-magnetic anomaly, trending E–W to ENE–WSW, lies immediately west of the greenstone belt. The anomaly’s orientation, strength, and coincident elevated nickel-in-soil geochemistry suggest it may represent a mafic intrusion—making it a key target for the current geophysical inversion."
+    "```"
    ]
   },
   {
