--- a/docs/case_studies/Forrestania/python_code/unconstrained_magnetics_inv_training.ipynb
+++ b/docs/case_studies/Forrestania/python_code/unconstrained_magnetics_inv_training.ipynb
@@ -73,54 +73,7 @@
    "source": [
     "## Geological Setting\n",
     "\n",
-    "The **Forrestania Greenstone Belt**, located in the *Youanmi Terrane* of the **Eastern Yilgarn Craton**, is known for its significant **Ni-Cu-PGE mineralisation**, primarily hosted within **komatiitic units** (Frost, 2003; Collins et al., 2012).\n",
-    "\n",
-    "The belt features a **structurally complex architecture**, including:\n",
-    "- Synclines  \n",
-    "- Faults  \n",
-    "- Shear zones  \n",
-    "...that play a major role in sulphide localisation.\n",
-    "\n",
-    "It is:\n",
-    "- Bounded by **granitic and gneissic basement**  \n",
-    "- Intruded by **monzogranite** and **granodiorite**  \n",
-    "- Transected by **Proterozoic dolerite dykes** (Perring et al., 1995)\n",
-    "\n",
-    "Multiple deformation events have **remobilised nickel sulphides** into:\n",
-    "- Footwall sediments  \n",
-    "- Granitic intrusions  \n",
-    "\n",
-    "→ Resulting in both **typical** (ultramafic-hosted) and **atypical** (granite-hosted) mineralisation (Collins et al., 2012).\n",
-    "\n",
-    "---\n",
-    "\n",
-    "The study area is largely underlain by **granitic basement**, adjacent to the **Parker-Range–Hatters Hill greenstone belt** to the east.\n",
-    "\n",
-    "This **north–south-trending belt** is the regional host of:\n",
-    "- **Nickel sulphide deposits** in narrow **ultramafic units**\n",
-    "- Hosted within Archaean **metabasalts** and **sulphidic sediments**\n",
-    "\n",
-    "🟡 **Nearby deposits include**:\n",
-    "- Beautiful Sunday  \n",
-    "- Flying Fox  \n",
-    "- New Morning\n",
-    "\n",
-    "---\n",
-    "\n",
-    "A **prominent magnetic anomaly**, trending **E-W to ENE-WSW**, is located just west of the greenstone belt.  \n",
-    "Its:\n",
-    "- Strong magnetic response  \n",
-    "- Orientation  \n",
-    "- Coincident **nickel-in-soil geochemistry**  \n",
-    "\n",
-    "...suggest the presence of a **mafic intrusion**, making it a **key geophysical target**.\n",
-    "\n",
-    "```{figure} ../images/Forrestania_case_study_Anomaly.jpg\n",
-    "---\n",
-    "name: Geological map\n",
-    "---\n",
-    "Figure: Magnetic anomaly near the Greenstone belt interpreted as a potential mafic intrusion.\n",
-    "```"
+    "See the [Forrestania - Geology](forrestania-geology) section for more details."
    ]
   },
   {
