--- a/docs/case_studies/Forrestania/forrestania.ipynb
+++ b/docs/case_studies/Forrestania/forrestania.ipynb
@@ -29,6 +29,14 @@
     "\n",
     "- [Gravity](gravity-code)\n",
     "- [Magnetics](magnetics-code)\n",
+    "```\n",
+    "\n",
+    "```{table}\n",
+    "| **Authors** |  |\n",
+    "|  :--- | :--- |\n",
+    "| [Glenn Pears](https://www.mirageoscience.com/consulting-services/geological-consultants-and-geophysical-consultants/#gp) | glennp@mirageoscience.com |\n",
+    "| [Polyanna Rowe](https://github.com/polyye) |  polyannar@mirageoscience.com |\n",
+    "| [Dominique Fournier](https://github.com/domfournier) |  dominiquef@mirageoscience.com |\n",
     "```"
    ]
   },
