--- a/docs/case_studies/Forrestania/python_code/joint_grav_mag.ipynb
+++ b/docs/case_studies/Forrestania/python_code/joint_grav_mag.ipynb
@@ -35,6 +35,13 @@
     "> This workflow closely follows the methodology and structure of the official [SimPEG Tutorials](https://simpeg.xyz/user-tutorials/).\n",
     "\n",
     "```{figure} ../images/open_code.png\n",
+    "```\n",
+    "\n",
+    "```{table}\n",
+    "| **Authors** |  |\n",
+    "|  :--- | :--- |\n",
+    "| [Polyanna Rowe](https://github.com/polyye) |  polyannar@mirageoscience.com |\n",
+    "| [Dominique Fournier](https://github.com/domfournier) |  dominiquef@mirageoscience.com |\n",
     "```"
    ]
   },
