--- a/docs/case_studies/Forrestania/python_code/unconstrained_magnetics_inv_training.ipynb
+++ b/docs/case_studies/Forrestania/python_code/unconstrained_magnetics_inv_training.ipynb
@@ -22,6 +22,13 @@
     "---\n",
     "name: Landing Image\n",
     "---\n",
+    "```\n",
+    "\n",
+    "```{table}\n",
+    "| **Authors** |  |\n",
+    "|  :--- | :--- |\n",
+    "| [Polyanna Rowe](https://github.com/polyye) |  polyannar@mirageoscience.com |\n",
+    "| [Dominique Fournier](https://github.com/domfournier) |  dominiquef@mirageoscience.com |\n",
     "```"
    ]
   },
